# paperwise

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  document.py  main.py  models.py
app/documents/: vehicle_registration.py
app/ocr/: onnxtr.py
