[project]
name = "paperwise"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133",
    "uvicorn[standard]>=0.41",
    "pydantic>=2.12,<3.0",
    "pydantic-settings>=2.13,<3.0",
    "langchain-core>=1.2,<2.0",
    "langchain-openai>=1.1,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7",
    "httpx>=0.28",
    "ruff>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]